gitops/deployment-oadp-demo/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: petclinic
    app.kubernetes.io/component: petclinic
    app.kubernetes.io/instance: petclinic
    app.kubernetes.io/name: petclinic
    app.kubernetes.io/part-of: petclinic
    app.openshift.io/runtime-version: metrics
  name: petclinic
  namespace: deployment-oadp-demo
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: petclinic
    weight: 100
  wildcardPolicy: None
